# movement_detector

./: .gitignore  .travis.yml  LICENSE.txt  README (for scientists).txt  README.md  background extractor.py  deflicker.py  demo_visual.py  file_loader.py  main.py  readthedocs.yml  requirements.txt  run  run.sh  settings.txt  setup.py  video-analyser.py
demo_script/: demo_visual.py  settings.txt
docs/: requirements.txt
docs/source/: analysis.rst  api.rst  conf.py  detectors.rst  index.rst  video.rst
experimentation/: asyncio_tests.py  gui_testing.py  kivy_tutorials.ipynb  optimization_tests.py  other_tests.py  threading_tests.py  video_analyser.py
experimentation/test/: functionality_testing.py  optimization_tests.py
md_interface/: interface.py
movement_detector/: __init__.py  analysis.py  detectors.py  interface.py  np_utils.py  player.py  resource_manager.py  settings.py  utils.py  video.py
movement_detector/cppmd/: CMakeLists.txt  path_utils.cpp  path_utils.h
movement_detector/cppmd/tests/: CMakeLists.txt  catch.hpp  main.cpp  test_path_utils.cpp  test_video_opencv.cpp
movement_detector/cppmd/video/: CMakeLists.txt  OpenCVVideo.cpp  OpenCVVideo.h
src/analysis/: change_detection.py
src/base/: app.py
src/common/: numpy_fns.py  resource_manager.py  settings.py
src/data/: video.py
src/gui/: main_window.py
src/gui/kivy_gui/: gui.kv  gui_app.py  kivygui.kv
src/video/: analysis.py  framebuffer.py  player.py  video.py
tests/: conftest.py  test_analysis.py  test_detectors.py  test_video.py
